# data-reliability-playbook

./: .gitignore  LICENSE  README.md  pyproject.toml
1-data-contracts-as-code/: README.md  contract.yaml  validator.py
1-data-contracts-as-code/data/: bad_data_email_missing.json  bad_data_low_age.json  bad_data_timestamp_format.json  bad_data_unexpected_property.json  bad_data_user_id.json  good_data.json
2-automated-profiling-and-drift/: README.md  drift_detection_demo.ipynb  generate_data.py
2-automated-profiling-and-drift/data/: dataset_drifted_sentiment.csv
3-data-resilience-drills/: README.md  run_drill.py  simple_pipeline.py
3-data-resilience-drills/data/: dataset_baseline.csv  output.csv  output_null_drill.csv
4-declarative-sidecar-pattern/: README.md  docker-compose.yaml
4-declarative-sidecar-pattern/app_with_observability/: Dockerfile  config.yaml  producer.py
4-declarative-sidecar-pattern/generic_sidecar_engine/: Dockerfile  requirements.txt  sidecar.py
5-bonus-gaslight-out-demo/: README.md  gaslight_demo.ipynb
